edit style, added readme

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1>TODO LIST</h1>
+			<h1>To Do List</h1>
 		</header>
 
         <!-- ToDo список задач -->
 		<div class="simple-todo">
 			<form id="todo-form">
-				<input id="todo-input" type="text" placeholder="Введите название задачи" />
-				<button class='addBtn' title="Добавить" type="submit"><i class='bx bx-plus-medical add'></i></button>
+				<input id="todo-input" type="text" placeholder="What do you need to do?" />
+				<button class='addBtn' title="Add" type="submit"><i class='bx bx-plus-medical add'></i></button>
 			</form>
 			<div class="tasks-wrapper">
-				<h2>Задачи на день:</h2>
 				<div id="todo-list">
 				</div>
 			</div>
